kubernetes/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-app
  labels:
    app: devops-demo-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: devops-demo-app
